@@ -32,6 +32,11 @@
 
 <div class="section">
 <dl>
+<dt>June 15, 2011</dt>
+<dd>Version 3.4.1 has been released and is now available for ftp.
+Octave 3.4.1 is primarily a bug fixing release.  See the
+<a href="NEWS-3.4.html">NEWS</a> file for a list of changes
+since the previous release.</dd>
 <dt>February 8, 2011</dt>
 <dd>Version 3.4.0 has been released and is now available for ftp.
 Octave 3.4.0 is a major new release.  See the
