@@ -2,6 +2,11 @@ __HEADER__(`Octave News Archive')
 
 <div class="section">
 <dl>
+<dt>June 15, 2011</dt>
+<dd>Version 3.4.1 has been released and is now available for ftp.
+Octave 3.4.1 is primarily a bug fixing release.  See the
+__OCTAVE_HTTP__(`NEWS-3.4.html', `NEWS') file for a list of changes
+since the previous release.</dd>
 <dt>February 8, 2011</dt>
 <dd>Version 3.4.0 has been released and is now available for ftp.
 Octave 3.4.0 is a major new release.  See the
